--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,29 @@ body {
   );
 }
 
+.button {
+  background-color: var(--color--tertiary--3);
+  color: white;
+  border: none;
+  border-radius: 3px;
+  min-width: 15rem;
+  min-height: 5rem;
+  padding: 1rem 1.5rem;
+  font-size: 1.6rem;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.button:hover {
+  background-color: var(--color--tertiary--2);
+}
+
+.button:disabled {
+  background-color: var(--color--tertiary--2);
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
 .container {
   width: 100%;
   height: 100%;
