--- a/src/style.css
+++ b/src/style.css
@@ -133,6 +133,49 @@ body {
   color: var(--color--tertiary--3);
 }
 
+.modal-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-container__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: whitesmoke;
+}
+
+.modal {
+  width: 50rem;
+  height: 25rem;
+  padding: 4rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.modal__title {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.modal__subtitle {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
+.modal__button-container {
+  display: flex;
+  justify-content: space-around;
+}
+
 .spinner {
   margin: 0 auto;
   text-align: center;
