--- a/src/style.css
+++ b/src/style.css
@@ -176,6 +176,33 @@ body {
   justify-content: space-around;
 }
 
+.screen {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 80rem;
+  min-height: 38rem;
+  padding: 2rem;
+  background-color: whitesmoke;
+  text-align: center;
+}
+
+.screen__header-container {
+  margin: 3rem 0;
+}
+
+.screen__title {
+  font-size: 4rem;
+  color: var(--color--tertiary--3);
+  margin-bottom: 2rem;
+}
+
+.screen__subtitle {
+  font-size: 1.8rem;
+}
+
 .spinner {
   margin: 0 auto;
   text-align: center;
